--- a/index.html
+++ b/index.html
@@ -6,30 +6,24 @@
     <title>TP08</title>
 </head>
 <body>
-    <script src="./ejercicios.js"></script>
-    <script src="./utils.js"></script>
 
-    <button onclick="calculadora(nombre, fecha)">Calculadora edad</button>
+
+    <button onclick="calculadora()">Calculadora edad</button>
     <button onclick="tirando()">Tirando fruta </button>
     <button onclick="comparar()">Comparando datos y tipos </button>
-    <button onclick="cuentas()">Yo objeto </button>
-    <button onclick="cuentas()">Doble de elementos </button>
-    <button onclick="cuentas()">Triangulo de astericos </button>
-    <button onclick="cuentas()">Nombres con A </button>
-    <button onclick="cuentas()">Reemplazar palabras </button>
-    <button onclick="cuentas()">Cortar texto </button>
-    <button onclick="cuentas()">String con separador </button>
-    <button onclick="cuentas()">Calculadora de recudadacion </button>
+    <button onclick="yo()">Yo objeto </button>
+    <button onclick="doble()">Doble de elementos </button>
+    <button onclick="triangulo()">Triangulo de astericos </button>
+    <button onclick="nombres()">Nombres con A </button>
+    <button onclick="reemplazar()">Reemplazar palabras </button>
+    <button onclick="cortar()">Cortar texto </button>
+    <button onclick="string()">String con separador </button>
+    <button onclick="calculadora2()">Calculadora de recudadacion </button>
 
-    <div> id = "opciones" 
+    <div id="opciones"></div>
+    <p id = "resultado"></p>
 
-
-    </div>
-   <p> id = "resultado"</p>
-    <input type="text" id="nombre" placeholder="Tu nombre">
-    <input type="date" id="fecha" placeholder="Tu fecha de nacimiento">
- 
-    <button onclick="cuentas()">Mostrar resultado</button>
+    <script src="./ejercicios.js"></script>
 
 </body>
 </html>
